--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   json_serializable: ^6.7.1
 
   # Gestion d'état
-  provider: ^6.1.0
+  provider: ^6.1.2
 
   # Affichage de cartes interactives
   google_maps_flutter: ^2.5.0
@@ -35,7 +35,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
 
   # Localisation & formatage de dates
-  intl: ^0.19.0
+  intl: ^0.20.2
 
   # Gestion des permissions (si besoin pour la localisation)
   permission_handler: ^11.3.0
@@ -53,6 +53,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/city.list.json
     - assets/images/
-    - assets/animations/
+#    - assets/animations/
 
