--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,25 +6,25 @@ plugins {
 }
 
 android {
-    namespace = "com.example.flutterprojet"
-    compileSdk = 35
-    ndkVersion = flutter.ndkVersion
+    namespace = "com.maria.flutterprojet"
+    compileSdk = flutter.compileSdkVersion
+    ndkVersion = "25.1.8937393"
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = "17"
     }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.flutterprojet"
+        applicationId = "com.maria.flutterprojet"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+        minSdk = 21
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
@@ -42,3 +42,5 @@ android {
 flutter {
     source = "../.."
 }
+
+
